# HousingSpeak

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: audience_profiles.yaml  distribution_rules.yaml  tone_guidelines.yaml
prompts/: alert_generation_prompt.txt  policy_brief_system_prompt.txt  public_content_system_prompt.txt  testimony_system_prompt.txt
src/: config.py  database.py
src/analysis/: comparative_analysis.py  impact_calculator.py  peer_matching.py  success_stories.py
src/api/: endpoints.py  review_workflow.py  webhooks.py
src/distribution/: cms_publisher.py  email_service.py  scheduler.py  social_media.py
src/generators/: alerts.py  model_ordinance.py  policy_brief.py  public_content.py  stakeholder_report.py  testimony.py
src/integrations/: claude_api.py  distribution_channels.py  housing_ear_client.py  housing_lens_client.py
src/models/: alert.py  campaign.py  content.py  schemas.py  stakeholder.py
src/templates/: blog_post.jinja2  email_alert.jinja2  policy_brief.jinja2  social_media.jinja2  testimony.jinja2
src/utils/: fact_checking.py  narrative_construction.py  tone_adaptation.py
tests/: conftest.py  test_analysis.py  test_api.py  test_utils.py
tests/test_distribution/: test_review_workflow.py
tests/test_generators/: test_alerts.py  test_policy_brief.py  test_public_content.py
tests/test_integrations/: test_housing_lens_client.py
